syntax = "proto3";

package envoy.config.filter.http.on_demand.v2;

option java_package = "io.envoyproxy.envoy.config.filter.http.on_demand.v2";
option java_outer_classname = "OnDemandProto";
option java_multiple_files = true;

import "validate/validate.proto";

// [#protodoc-title: OnDemand]
// IP tagging :ref:`configuration overview <config_http_filters_on_demand>`.
// [#extension: envoy.filters.http.on_demand]

message OnDemand {
}
